package Sistema_de_Pagos;

public abstract class MetodoPago {


    public abstract void procesarPago(double importe);


}
